--- a/svd.ipynb
+++ b/svd.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,6 +17,7 @@
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "import scipy.sparse\n",
+    "import sklearn.decomposition\n",
     "import sklearn.manifold\n",
     "\n",
     "import time\n",
@@ -73,6 +74,38 @@
     "    plt.xlabel('K')\n",
     "    plt.ylabel('Error')\n",
     "    plt.legend()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "choices = {\n",
+    "    \"choice\": dMovies.loc[dGenres[\"animation\"]==1,:].sort_values(\"nratings\").tail(10).index.values,\n",
+    "    \"popular\": dMovies.sort_values(\"nratings\").tail(10).index.values,\n",
+    "    \"highrated\": dMovies.sort_values(\"movieavg\").tail(10).index.values,\n",
+    "\n",
+    "    \"animation\": dMovies.loc[dGenres[\"animation\"]==1,:].tail(10).index.values,\n",
+    "    \"thriller\": dMovies.loc[dGenres[\"thriller\"]==1,:].tail(10).index.values,\n",
+    "    \"fantasy\": dMovies.loc[dGenres[\"fantasy\"]==1,:].tail(10).index.values\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plotproj(Vp, dMovies, choices):\n",
+    "    print(Vp.shape)\n",
+    "    for choice,movies in choices.items():\n",
+    "        plt.title(choice)\n",
+    "        plt.scatter(Vp[movies-1,0], Vp[movies-1,1], s=1)\n",
+    "        for i in movies:\n",
+    "            plt.annotate(dMovies.loc[i,\"title\"], Vp[movies-1])"
    ]
   },
   {
@@ -178,7 +211,7 @@
     }
    ],
    "source": [
-    "reg = 0.05\n",
+    "reg = 0.1\n",
     "eta = 0.03 # learning rate\n",
     "K = 20\n",
     "\n",
@@ -191,6 +224,18 @@
     "print(\"elapsed\", time.time() - start)\n",
     "\n",
     "print(\"Ein\", ein, \"Eout\", eout)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "svd_u = sklearn.decomposition.TruncatedSVD()\n",
+    "svd_u.fit(unbiased[1])\n",
+    "Up = svd_u.transform(unbiased[0])\n",
+    "Vp = svd_u.transform(unbiased[1])"
    ]
   },
   {
@@ -297,7 +342,7 @@
     }
    ],
    "source": [
-    "reg = 0.05\n",
+    "reg = 0.1\n",
     "eta = 0.03 # learning rate\n",
     "K = 20\n",
     "\n",
@@ -313,10 +358,22 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "svd_b = sklearn.decomposition.TruncatedSVD()\n",
+    "svd_b.fit(biased[1])\n",
+    "Upb = svd_b.transform(unbiased[0])\n",
+    "Vpb = svd_b.transform(unbiased[1])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## visualize"
+    "## experiment"
    ]
   },
   {
